# carcalc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Claude.md  FEATURES.md  LICENSE  README.md  TODO.md  Taskfile.yml  index.html  package.json  playwright.config.js  tailwind.config.js
.claude/: settings.local.json
src/: lib.rs  main.rs
src/calculations/: mod.rs  tco.rs
src/components/: app.rs  home.rs  mod.rs
src/components/cars/: card.rs  cost_summary.rs  form.rs  list.rs  mod.rs
src/components/maintenance/: editor.rs  mod.rs
src/components/settings/: form.rs  mod.rs
src/components/ui/: mod.rs  tooltip.rs
src/data/: mod.rs  sample_maintenance.rs
src/models/: car.rs  computed.rs  maintenance.rs  mod.rs  settings.rs
src/tests/: calculations.rs  mod.rs
tests/e2e/: calculations.spec.js  cars.spec.js  maintenance.spec.js  persistence.spec.js  settings.spec.js
