[package]
name = "carcalc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "*", features = ["csr"] }
leptos_meta = { version = "*" }
leptos_router = { version = "*" }
leptos-use = { version = "*", features = ["storage"] }
console_error_panic_hook = "*"
wasm-bindgen = "0.2.108"
serde = { version = "*", features = ["derive"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
